expanded GuiConfig to allow 3 pages